score counter added

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
     <header>
 
     <div id= "start-container" class ="container">
+        <h2>Are you ready?</h2>        
         <button id = "start-Quiz" onclick="startQuiz()">Start quiz</button>
 
     </div>
@@ -39,7 +40,7 @@
         <h2>Scoreboard</h2>
         <span id = "final-score" ></span>
         <button id = "restart" onclick="initialize()">Restart</button>
-        <div id= "scoreboard">
+        
 
     </div>
         
